[package]
name = "everss"
version = "0.1.0"
authors = ["Kevin Pellet (Ilphrin) <ilphrin@autistici.org>"]

[dependencies]
rss = "0.3.1"
curl = "0.3.0"
time = "0.1.35"
chrono = "0.2"
glob = "*"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
opt-level = 3
debug = false
